[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/tp.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 64.4981

[node name="tp" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -64.0
margin_top = 56.0
margin_right = 64.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_tp_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_tp_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
